# Benno111-UseLess

./: AGENTS.md  BUILD_LINUX.md  Build.sh  Cargo.toml  LICENSE  Makefile  Makefile.multiarch  OS.cfproj  README.md  Run-OS-Next-Stage.cmd  automatedruns  bundle_iso.sh  limine.conf  prep.sh  run-usb.sh  run.sh  write_usb.sh
.cargo/: config.toml
Docs/: Architecture.txt  Build_Instructions.txt  Extending_Kernel.txt  Overview.txt
bootloader/: build_bios.sh  build_uefi.sh
bootmanager/: bootmanager.c
config/: driver_config.json
docs/: BUILD_LINUX.md  COMPONENTIZATION_PLAN.md
examples/: fibonacci.py  hello.cpp  hello.nano
fixes/: core-system-fixes.patch  legacy-fixes.patch
image/: log.txt
kernel/: linker_x86.ld  linker_x86_64.ld  linker_x86_64_limine.ld
os-x86_64/: Makefile  README.md  build.sh  limine-installed.conf  limine.conf
scripts/: auto-push.ps1  bootstrap-freedos-source.sh  build-install-boot-files.sh  build-limine.sh  create-arm64-iso.sh  create-bios-image.sh  create-boot-image.sh  create-dos-installer-image.sh  create-dos-installer-iso.sh  create-iso.sh  create-system-image.sh  create-uefi-image.sh  create-x86_64-iso.sh  embed_installer_payload.py  prepare-freedos-source-assets.sh  run-desktop.ps1  setup-toolchain-linux.sh  update-os-boot-manager.sh
shared/: password_hash.h
shared-api/: app_api.h
src/: accounts.rs  acpi.rs  allocator.rs  apps_launcher.rs  boot_manager.rs  command_ui.rs  commands.rs  config.rs  crash.rs  crash_predictor.rs  device.rs  drivers.rs  framebuffer.rs  fs.rs  input.rs  login.rs  main.rs  mod.rs  serial.rs  usb.rs  (+7 more)
(+257 files in other folders)
